# esta

./: .gitignore  .travis.yml  Cargo.toml  README.md
.circleci/: config.yml
benches/: fibonacci_bench.rs
demos/: basic_struct.est  bools.est  callgraph.est  control_flow.est  dot_operator.est  factorial.est  fibonacci.est  for_test.est  functions.est  list.est  logic.est  math.est  simple_function.est  simple_function2.est  simple_function5.est  simple_math.est  simple_scope.est  struct.est  test_mod.est  tokens.est  typed_function.est  while_loop.est
examples/: fibonacci.est
src/: ast.rs  grammar.lalrpop  integration_tests.rs  lib.rs  main.rs  tokens.rs
src/backend/: allocation.rs  allocator.rs  assembly_context.rs  mod.rs  program.rs
src/frontend/: ast.rs  expand.rs  fold.rs  infer_types.rs  mod.rs  scanner.rs  scope.rs  tests.rs  tokens.rs  traversal.rs  types.rs  visitor.rs
src/middleend/: mod.rs  types.rs
src/util/: fold.rs  mod.rs  stack.rs  transform.rs
src/vm/: bytecode.rs  mod.rs  serialize.rs  tests.rs
testsuite/: assignment.est  for.est  if.est  realworld.est  simple_function1.est  simple_function3.est  simple_function4.est  simple_function5.est  struct.est  while.est
