[package]
name = "esta"
version = "0.1.0"
authors = ["epe2 <nedellis1234@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.16.3"

[dependencies]
regex = "1.1.5"
lalrpop-util = "0.16.3"
lazy_static = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
slog = "2.4.1"
sloggers = "0.3.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
path = "./src/benches/fibonacci_bench.rs"
name = "fibonacci_bench"
harness = false
