[package]
name = "esta"
version = "0.1.0"
authors = ["epe2 <nedellis1234@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.16.3"

[dependencies]
regex = "1.1.5"
lalrpop-util = "0.16.3"
lazy_static = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
log = "0.4.0"
env_logger = "0.6.1"
itertools = "0.8.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
path = "./benches/fibonacci_bench.rs"
name = "fibonacci_bench"
harness = false
